intended v0.2.8
+ if/else statements work as expected again

v0.2.7
+ Unit tests for parser, resolver, compiler and runtime library
+ Proper JS bridge: <script jsVar=funVar> ... jsVar.set(...) </script>
+ Mouse module
+ Styles with dynamic values: <div id="output1" style={ background:'red', width:100, height:100, position:"absolute", top:Mouse.y, left:Mouse.x }/>
+ Object literal emission
+ Variables are now dynamically typed, and expression type-evaluated at runtime

v0.2.6
+ npm install works again

v0.2.5
+ Fix parsing of empty XML tags
+ Add parser and resolver test cases for XML
+ examples/chat.fun works again :)

v0.2.4
+ operator presedence in parser
+ parser unit tests for if statements, composite expressions, and operator presedence
+ use latest fin
+ use latest std
+ first resolver tests
+ first compiler tests
+ moved all js files into /lib

v0.2.3
+ Parser improvements
+ Local expressions are now Local item properties, e.g. let name = "marcus" name.set("marcus westin")
+ Unit testing using nodeunit - a bunch of test cases added for the parser!

v0.2.2
+ File cleanup
+ Upgrade to fin v0.2.11

v0.2.1
+ Fix if/else statement parsing

v0.2.0
+ Publish fun with npm
+ Significantly improved parsing
+ Use latest fin

v0.1.0
+ First versioned version of fun. Lots of stuff works, lots of stuff is hacky, lots of stuff to be done.

TODOs and Roadmap

Get involved - complete a task :)

All expressions should have type:EXPRESSION | INVOCATION | COMPOSITE - each expression should also have a valueType. An alias has the type of what its aliasing. An invocable's signature's argument has the type of what is passed in. A composite has the type of its left operand(?).

--------------

Fix prefixes.
	-3
and
	displayNumber(-2)
work, but 
	for (number in [1,2,3]) { displayNumber(-number) }
does not, nor does
	-number

--------------

- Add valueType to each AST with a value